--- a/tasks/OpenBSD.yml
+++ b/tasks/OpenBSD.yml
@@ -5,7 +5,10 @@
   changed_when: False
 
 - name: install minimal ansible python libs
-  raw: pkg_add -I python%2.7
+#  raw: |
+#    pkg_add -I python%3.6 py3-openssl py3-ndg-httpsclient py3-pyasn1
+  raw: |
+    pkg_add -I python%2.7 py-openssl py-ndg-httpsclient py-pyasn1
   changed_when: False
 
 - name: force ansible to regather facts
