Remove the deployment of ansible system-wide as it is deployed in a virtualenv in the role ansible_deployment

--- a/tasks/pkg_OpenBSD.yml
+++ b/tasks/pkg_OpenBSD.yml
@@ -6,7 +6,7 @@
 
 - name: install minimal ansible python libs
   raw: |
-    pkg_add -I python%3.6 py3-openssl py3-ndg-httpsclient py3-pyasn1 py-pip
+    pkg_add -I python%3.6 py3-openssl py3-ndg-httpsclient py3-pyasn1 py-pip py3-virtualenv
 #  raw: |
-#    pkg_add -I python%2.7 py-openssl py-ndg-httpsclient py-pyasn1 py-pip
+#    pkg_add -I python%2.7 py-openssl py-ndg-httpsclient py-pyasn1 py-pip py-virtualenv
   changed_when: False
