Major update to support ansible 2.9, molecule, linters, github

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,9 @@
 ---
 
+requirements_packages:
+  Debian: []
+  OpenBSD: []
+
 requirements_ansible_ssh_authorized_keys: []
+
+requirements_ansible_home: '/home/ansible'
