Add a missing dependency

--- a/requirements_galaxy.yml
+++ b/requirements_galaxy.yml
@@ -3,3 +3,7 @@
 - src: 'https://github.com/tristan-weil/ansible-role-pkg.git'
   version: 'master'
   scm: 'git'
+
+- src: 'https://github.com/tristan-weil/ansible-role-privesc.git'
+  version: 'master'
+  scm: 'git'
