--- a/molecule/verify.yml
+++ b/molecule/verify.yml
@@ -4,28 +4,13 @@
   name: 'Verify'
   become: True
   gather_facts: True
+  vars:
+    __verify_ansible_sudo_by_os_family:
+      Debian: "su -s /bin/bash ansible -c 'sudo /usr/bin/whoami'"
+      OpenBSD: "su -s /bin/ksh ansible -c 'doas /usr/bin/whoami'"
 
   tasks:
-    - block:
-        - name: 'Exec cmd1'
-          shell: |
-            su -s /bin/ksh ansible -c 'doas /usr/bin/whoami'
-          register: _verify_cmd1
-
-        - name: 'Check commands'
-          assert:
-            that:
-              - _verify_cmd1.stdout == 'root'
-      when: ansible_facts['os_family'] == 'OpenBSD'
-
-    - block:
-        - name: 'Exec cmd1'
-          shell: |
-            su -s /bin/bash ansible -c 'sudo /usr/bin/whoami'
-          register: _verify_cmd1
-
-        - name: 'Check commands'
-          assert:
-            that:
-              - _verify_cmd1.stdout == 'root'
-      when: ansible_facts['os_family'] == 'Debian'
+    - name: 'Check the ansible user can privesc'
+      shell: "{{ __verify_ansible_sudo_by_os_family[ ansible_facts['os_family'] ] }}"
+      register: __verify_cmd
+      failed_when: __verify_cmd.stdout != 'root'
